--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -14,6 +14,7 @@ brew "git"
 brew "git-lfs"
 brew "graphviz"
 brew "jsoncpp"
+brew "make"
 brew "mysql"
 brew "pyenv"
 brew "pyenv-virtualenv"
@@ -25,6 +26,7 @@ cask "android-ndk"
 cask "android-sdk"
 cask "android-studio"
 cask "appcleaner"
+cask "beyond-compare"
 cask "brackets"
 cask "clion"
 cask "dash"
