--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,12 +24,15 @@
       path: zsh/zshrc.zsh
       force: true
     ~/.zprofile: zsh/zprofile
+
     # Linters
+
     # Git
     ~/.gitconfig: git/gitconfig
-    ~/.gitignore: git/gitignore
+    # ~/.gitignore: git/gitignore
     ~/.gitattributes: git/gitattributes
     ~/.gitignore_global: git/gitignore_global
+
     # Apps
 
     # VS Code Linux
@@ -40,12 +43,14 @@
       force: true
 
     # VS Code MacOS
-    # ~/Library/Application Support/Code/User/:
     ~/Library/Application Support/Code/User/settings.json:
       if: "[ `uname` = Darwin ]"
       path: vscode/macos/settings.json
-      # glob: true
-      # path: vscode/macos/*.json
+      relink: true
+
+    ~/Library/Application Support/Code/User/snippets:
+      if: "[ `uname` = Darwin ]"
+      path: vscode/snippets
       force: true
 
 - shell:
