--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -15,6 +15,7 @@ brew "git-lfs"
 brew "graphviz"
 brew "jsoncpp"
 brew "make"
+brew "mas"
 brew "mysql"
 brew "pyenv"
 brew "pyenv-virtualenv"
@@ -41,3 +42,13 @@ cask "slack"
 cask "sublime-text"
 cask "visual-studio-code"
 cask "vnc-viewer"
+mas "Compressor", id: 424390742
+mas "Final Cut Pro", id: 424389933
+mas "GarageBand", id: 682658836
+mas "iMovie", id: 408981434
+mas "Keynote", id: 409183694
+mas "Logic Pro", id: 634148309
+mas "MainStage", id: 634159523
+mas "Motion", id: 434290957
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
