--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -52,3 +52,5 @@ mas "MainStage", id: 634159523
 mas "Motion", id: 434290957
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
+mas "Trello", id: 1278508951
+mas "Xcode", id: 497799835
