Adds Raspberry Pi Imager to macos/Brewfile

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -37,6 +37,7 @@ cask "lastpass"
 cask "mactex"
 cask "microsoft-auto-update"
 cask "microsoft-office"
+cask "raspberry-pi-imager"
 cask "rectangle"
 cask "slack"
 cask "sublime-text"
