--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -47,6 +47,7 @@ mas "Compressor", id: 424390742
 mas "Final Cut Pro", id: 424389933
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
+mas "iStatistica Pro", id: 1447778660
 mas "Keynote", id: 409183694
 mas "Logic Pro", id: 634148309
 mas "MainStage", id: 634159523
