Updates gitconfig and Brewfile

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -18,6 +18,10 @@ brew "jsoncpp"
 brew "make"
 brew "mas"
 brew "mysql"
+brew "pandoc"
+brew "pandoc-crossref"
+brew "pandoc-include-code"
+brew "pandoc-plot"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "vim"
