Updates Brewfile and set-defaults.sh

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -28,6 +28,8 @@ brew "vim"
 brew "wget"
 brew "zsh-completions"
 cask "adobe-creative-cloud"
+cask "airdroid"
+cask "android-file-transfer"
 cask "android-ndk"
 cask "android-sdk"
 cask "android-studio"
