--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -61,6 +61,7 @@ mas "iStatistica Pro", id: 1447778660
 mas "Keynote", id: 409183694
 mas "Logic Pro", id: 634148309
 mas "MainStage", id: 634159523
+mas "Messenger", id: 1480068668
 mas "Motion", id: 434290957
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
