Updates brew installations and VS code extensions

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -24,6 +24,7 @@ brew "pandoc-include-code"
 brew "pandoc-plot"
 brew "pyenv"
 brew "pyenv-virtualenv"
+brew "python@3.11"
 brew "vim"
 brew "wget"
 brew "zsh-completions"
