--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -7,7 +7,7 @@ brew "brew-cask-completion"
 brew "sqlite"
 brew "cmake"
 brew "curl"
-brew "dash"
+brew "dash", link: false
 brew "dos2unix"
 brew "doxygen"
 brew "gcc"
@@ -40,6 +40,7 @@ cask "beyond-compare"
 cask "brackets"
 cask "clion"
 cask "dash"
+cask "docker"
 cask "google-chrome"
 cask "iterm2"
 cask "lastpass"
