Updates of latest brew and vscode

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -22,9 +22,11 @@ brew "pandoc"
 brew "pandoc-crossref"
 brew "pandoc-include-code"
 brew "pandoc-plot"
+brew "python@3.11"
+brew "poetry"
 brew "pyenv"
 brew "pyenv-virtualenv"
-brew "python@3.11"
+brew "python@3.10"
 brew "vim"
 brew "wget"
 brew "zsh-completions"
