--- a/vscode/macos/settings.json
+++ b/vscode/macos/settings.json
@@ -20,5 +20,9 @@
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
   "vim.smartRelativeLine": true,
-  "python.linting.mypyEnabled": true
+  "python.linting.mypyEnabled": true,
+  "[python]": {
+    "editor.formatOnType": true
+  },
+  "window.zoomLevel": 1
 }
