--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -69,5 +69,6 @@ mas "Messenger", id: 1480068668
 mas "Motion", id: 434290957
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
+mas "Prime Video", id: 545519333
 mas "Trello", id: 1278508951
 mas "Xcode", id: 497799835
