Updates brew and VS Code

--- a/vscode/macos/settings.json
+++ b/vscode/macos/settings.json
@@ -23,5 +23,8 @@
   "python.linting.mypyEnabled": true,
   "[python]": {
     "editor.formatOnType": true
-  }
+  },
+  "autoDocstring.guessTypes": true,
+  "autoDocstring.docstringFormat": "google",
+  "autoDocstring.logLevel": "INFO",
 }
