--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/core"
 brew "boost"
 brew "brew-cask-completion"
 brew "sqlite"
+brew "python@3.11"
 brew "cmake"
 brew "curl"
 brew "dash", link: false
@@ -22,7 +23,6 @@ brew "pandoc"
 brew "pandoc-crossref"
 brew "pandoc-include-code"
 brew "pandoc-plot"
-brew "python@3.11"
 brew "poetry"
 brew "pyenv"
 brew "pyenv-virtualenv"
@@ -41,6 +41,7 @@ cask "archiver"
 cask "beyond-compare"
 cask "brackets"
 cask "clion"
+cask "copilot-for-xcode"
 cask "dash"
 cask "docker"
 cask "google-chrome"
@@ -54,6 +55,7 @@ cask "raspberry-pi-imager"
 cask "rectangle"
 cask "slack"
 cask "sublime-text"
+cask "swiftformat-for-xcode"
 cask "visual-studio-code"
 cask "vnc-viewer"
 mas "Compressor", id: 424390742
@@ -72,3 +74,33 @@ mas "Pages", id: 409201541
 mas "Prime Video", id: 545519333
 mas "Trello", id: 1278508951
 mas "Xcode", id: 497799835
+vscode "bungcip.better-toml"
+vscode "cschlosser.doxdocgen"
+vscode "eamodio.gitlens"
+vscode "esbenp.prettier-vscode"
+vscode "GitHub.copilot"
+vscode "GitHub.copilot-chat"
+vscode "GitHub.copilot-nightly"
+vscode "jeff-hykin.better-cpp-syntax"
+vscode "mechatroner.rainbow-csv"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-python.black-formatter"
+vscode "ms-python.flake8"
+vscode "ms-python.isort"
+vscode "ms-python.pylint"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode.cmake-tools"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.cpptools-extension-pack"
+vscode "ms-vscode.cpptools-themes"
+vscode "ms-vscode.makefile-tools"
+vscode "njpwerner.autodocstring"
+vscode "twxs.cmake"
+vscode "vscodevim.vim"
