Updates HomeBrew installations and VS Code extensions

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,7 +1,5 @@
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-drivers"
-tap "homebrew/core"
 brew "boost"
 brew "brew-cask-completion"
 brew "sqlite"
@@ -31,7 +29,6 @@ brew "vim"
 brew "wget"
 brew "zsh-completions"
 cask "adobe-creative-cloud"
-cask "airdroid"
 cask "android-file-transfer"
 cask "android-ndk"
 cask "android-sdk"
@@ -51,6 +48,7 @@ cask "logitech-options"
 cask "mactex"
 cask "microsoft-auto-update"
 cask "microsoft-office"
+cask "postman"
 cask "raspberry-pi-imager"
 cask "rectangle"
 cask "slack"
@@ -80,10 +78,11 @@ vscode "eamodio.gitlens"
 vscode "esbenp.prettier-vscode"
 vscode "GitHub.copilot"
 vscode "GitHub.copilot-chat"
-vscode "GitHub.copilot-nightly"
 vscode "jeff-hykin.better-cpp-syntax"
 vscode "mechatroner.rainbow-csv"
 vscode "ms-azuretools.vscode-docker"
+vscode "ms-dotnettools.csharp"
+vscode "ms-dotnettools.vscode-dotnet-runtime"
 vscode "ms-python.black-formatter"
 vscode "ms-python.flake8"
 vscode "ms-python.isort"
