Updates to latest brew and VS code modules

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -2,8 +2,6 @@ tap "homebrew/bundle"
 tap "homebrew/cask-drivers"
 brew "boost"
 brew "brew-cask-completion"
-brew "sqlite"
-brew "python@3.11"
 brew "cmake"
 brew "curl"
 brew "dash", link: false
@@ -14,6 +12,7 @@ brew "git"
 brew "git-lfs"
 brew "graphviz"
 brew "jsoncpp"
+brew "sqlite"
 brew "make"
 brew "mas"
 brew "mysql"
@@ -25,6 +24,7 @@ brew "poetry"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "python@3.10"
+brew "python@3.11"
 brew "vim"
 brew "wget"
 brew "zsh-completions"
@@ -48,6 +48,7 @@ cask "logitech-options"
 cask "mactex"
 cask "microsoft-auto-update"
 cask "microsoft-office"
+cask "oracle-jdk"
 cask "postman"
 cask "raspberry-pi-imager"
 cask "rectangle"
@@ -72,20 +73,21 @@ mas "Pages", id: 409201541
 mas "Prime Video", id: 545519333
 mas "Trello", id: 1278508951
 mas "Xcode", id: 497799835
-vscode "bungcip.better-toml"
 vscode "cschlosser.doxdocgen"
 vscode "eamodio.gitlens"
 vscode "esbenp.prettier-vscode"
-vscode "GitHub.copilot"
-vscode "GitHub.copilot-chat"
+vscode "github.copilot"
+vscode "github.copilot-chat"
 vscode "jeff-hykin.better-cpp-syntax"
 vscode "mechatroner.rainbow-csv"
 vscode "ms-azuretools.vscode-docker"
 vscode "ms-dotnettools.csharp"
 vscode "ms-dotnettools.vscode-dotnet-runtime"
 vscode "ms-python.black-formatter"
+vscode "ms-python.debugpy"
 vscode "ms-python.flake8"
 vscode "ms-python.isort"
+vscode "ms-python.mypy-type-checker"
 vscode "ms-python.pylint"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
@@ -101,5 +103,6 @@ vscode "ms-vscode.cpptools-extension-pack"
 vscode "ms-vscode.cpptools-themes"
 vscode "ms-vscode.makefile-tools"
 vscode "njpwerner.autodocstring"
+vscode "tamasfe.even-better-toml"
 vscode "twxs.cmake"
 vscode "vscodevim.vim"
