--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -2,7 +2,6 @@ tap "homebrew/bundle"
 tap "homebrew/cask-drivers"
 brew "boost"
 brew "brew-cask-completion"
-brew "sqlite"
 brew "cmake"
 brew "curl"
 brew "dash", link: false
@@ -10,7 +9,10 @@ brew "dos2unix"
 brew "doxygen"
 brew "gcc"
 brew "git"
+brew "git-delta"
 brew "git-lfs"
+brew "icu4c@76"
+brew "sqlite"
 brew "graphviz"
 brew "jsoncpp"
 brew "make"
@@ -20,11 +22,15 @@ brew "pandoc"
 brew "pandoc-crossref"
 brew "pandoc-include-code"
 brew "pandoc-plot"
+brew "pkgconf"
 brew "poetry"
 brew "pyenv"
 brew "pyenv-virtualenv"
+brew "python-tk@3.13"
 brew "python@3.10"
 brew "python@3.11"
+brew "ruff"
+brew "uv"
 brew "vim"
 brew "wget"
 brew "zsh-completions"
@@ -35,6 +41,7 @@ cask "android-sdk"
 cask "android-studio"
 cask "appcleaner"
 cask "archiver"
+cask "balenaetcher"
 cask "beyond-compare"
 cask "brackets"
 cask "clion"
@@ -64,7 +71,6 @@ mas "Hidden Bar", id: 1452453066
 mas "iMovie", id: 408981434
 mas "iStatistica Pro", id: 1447778660
 mas "Keynote", id: 409183694
-mas "LastPass", id: 926036361
 mas "Logic Pro", id: 634148309
 mas "MainStage", id: 634159523
 mas "Messenger", id: 1480068668
@@ -75,6 +81,7 @@ mas "Prime Video", id: 545519333
 mas "Trello", id: 1278508951
 mas "Xcode", id: 497799835
 vscode "cschlosser.doxdocgen"
+vscode "docker.docker"
 vscode "eamodio.gitlens"
 vscode "esbenp.prettier-vscode"
 vscode "github.copilot"
@@ -98,11 +105,14 @@ vscode "ms-toolsai.jupyter-renderers"
 vscode "ms-toolsai.vscode-jupyter-cell-tags"
 vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode-remote.remote-ssh"
+vscode "ms-vscode-remote.remote-ssh-edit"
 vscode "ms-vscode.cmake-tools"
 vscode "ms-vscode.cpptools"
 vscode "ms-vscode.cpptools-extension-pack"
 vscode "ms-vscode.cpptools-themes"
 vscode "ms-vscode.makefile-tools"
+vscode "ms-vscode.remote-explorer"
 vscode "njpwerner.autodocstring"
 vscode "tamasfe.even-better-toml"
 vscode "twxs.cmake"
