Updated brew and vscode.

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,19 +1,17 @@
 tap "homebrew/bundle"
-tap "homebrew/cask-drivers"
 brew "boost"
 brew "brew-cask-completion"
 brew "cmake"
 brew "curl"
-brew "dash", link: false
+brew "dash-shell", link: false
 brew "dos2unix"
 brew "doxygen"
 brew "gcc"
 brew "git"
 brew "git-delta"
 brew "git-lfs"
-brew "icu4c@76"
-brew "sqlite"
 brew "graphviz"
+brew "icu4c@76"
 brew "jsoncpp"
 brew "make"
 brew "mas"
@@ -23,6 +21,7 @@ brew "pandoc-crossref"
 brew "pandoc-include-code"
 brew "pandoc-plot"
 brew "pkgconf"
+brew "sqlite"
 brew "poetry"
 brew "pyenv"
 brew "pyenv-virtualenv"
@@ -40,14 +39,14 @@ cask "android-ndk"
 cask "android-sdk"
 cask "android-studio"
 cask "appcleaner"
-cask "archiver"
+cask "archiver-app"
 cask "balenaetcher"
 cask "beyond-compare"
 cask "brackets"
 cask "clion"
 cask "copilot-for-xcode"
 cask "dash"
-cask "docker"
+cask "docker-desktop"
 cask "google-chrome"
 cask "iterm2"
 cask "lastpass"
@@ -80,6 +79,7 @@ mas "Pages", id: 409201541
 mas "Prime Video", id: 545519333
 mas "Trello", id: 1278508951
 mas "Xcode", id: 497799835
+vscode "charliermarsh.ruff"
 vscode "cschlosser.doxdocgen"
 vscode "docker.docker"
 vscode "eamodio.gitlens"
@@ -88,6 +88,7 @@ vscode "github.copilot"
 vscode "github.copilot-chat"
 vscode "jeff-hykin.better-cpp-syntax"
 vscode "mechatroner.rainbow-csv"
+vscode "ms-azuretools.vscode-containers"
 vscode "ms-azuretools.vscode-docker"
 vscode "ms-dotnettools.csharp"
 vscode "ms-dotnettools.vscode-dotnet-runtime"
