Latest updates applied for HomeBrew and VSCode.

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -3,7 +3,7 @@ brew "boost"
 brew "brew-cask-completion"
 brew "cmake"
 brew "curl"
-brew "dash-shell", link: false
+brew "dash-shell"
 brew "dos2unix"
 brew "doxygen"
 brew "gcc"
@@ -86,6 +86,7 @@ vscode "eamodio.gitlens"
 vscode "esbenp.prettier-vscode"
 vscode "github.copilot"
 vscode "github.copilot-chat"
+vscode "github.vscode-pull-request-github"
 vscode "jeff-hykin.better-cpp-syntax"
 vscode "mechatroner.rainbow-csv"
 vscode "ms-azuretools.vscode-containers"
@@ -100,6 +101,7 @@ vscode "ms-python.mypy-type-checker"
 vscode "ms-python.pylint"
 vscode "ms-python.python"
 vscode "ms-python.vscode-pylance"
+vscode "ms-python.vscode-python-envs"
 vscode "ms-toolsai.jupyter"
 vscode "ms-toolsai.jupyter-keymap"
 vscode "ms-toolsai.jupyter-renderers"
