Updates brew files.

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -68,6 +68,7 @@ mas "Hidden Bar", id: 1452453066
 mas "iMovie", id: 408981434
 mas "iStatistica Pro", id: 1447778660
 mas "Keynote", id: 409183694
+mas "LastPass for Safari", id: 6504626762
 mas "Logic Pro", id: 634148309
 mas "MainStage", id: 634159523
 mas "Messenger", id: 1480068668
